--- a/View/Index.html
+++ b/View/Index.html
@@ -31,6 +31,14 @@
             <div class="buttons"></div>
             <div class="hamburger"></div>
         </div>
+        <div class="header2 position1 ">
+          <div class="icons  ">
+            <!-- <p>Follow us on :</p> -->
+            <a href=""> <i class="fa fa-instagram"></i></a>
+            <a href=""> <i class="fa fa-facebook"></i></a>
+              <a href=""><i class="fa fa-twitter"></i></a>
+          </div>
+        </div>
         <!-- End of the Navbar -->
 
         <div class="home ">
@@ -39,10 +47,102 @@
             <p>Discount are offered for limited time period so don't miss the chance and grab the opportunity</p>
         </div>
         
-        <div class="backgroundimage" id="image1"><img src="../assests/image1.png" alt=""> </div>
-        <div class="backgroundimage" id="image2"><img src="../assests/image2.png" alt=""> </div>
-        <div class="backgroundimage" id="image3"><img src="../assests/image3.png" alt=""> </div>
+        <div class="backgroundimage" id="image1" data-aos="fade-left" data-aos-delay="800"><img src="../assests/image1.png" alt=""> </div>
+        <div class="backgroundimage" id="image2" data-aos="fade-right" data-aos-delay="800"><img src="../assests/image2.png" alt=""> </div>
+        <div class="backgroundimage" id="image3" data-aos="fade-up" ><img src="../assests/image3.png" alt=""> </div>
         <!-- <div class="backgroundimage" id="image4"><img src="../assests/image1.png" alt=""> </div> -->
+    </div>
+    <div class="newarrivals">
+      <h1 class="heading"> New Arrivals</h1>
+      <div class="cards-wrapper  row p-4 container m-auto">
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/1.jpg" alt="">
+              <div class="icons">
+                <a href=""> <i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+            <div class="content p-4">
+              <div class="title">
+                <a href="">Hoodie</a>
+                <p>Rs. 0.00</p>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/2.jpg" alt="">
+              <div class="icons">
+                <a href=""> <i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+            <div class="content p-4">
+              <div class="title">
+                <a href="">Jeans Pants</a>
+                <p>Rs. 0.00</p>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div> 
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/3.jpg" alt="">
+              <div class="icons">
+                <a href=""> <i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+            <div class="content p-4">
+              <div class="title">
+                <a href="">Hoodie</a>
+                <p>Rs. 0.00</p>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+         <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/5.jpg" alt="">
+              <div class="icons">
+                <a href=""> <i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+            <div class="content p-4">
+              <div class="title">
+                <a href="">Hoodie</a>
+                <p>Rs. 0.00</p>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/5.jpg" alt="">
+              <div class="icons">
+                <a href=""> <i class="fa fa-heart"></i></a>
+              </div>
+            </div>
+            <div class="content p-4">
+              <div class="title">
+                <a href="">Jumpers</a>
+                <p>Rs. 0.00</p>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+        
+
+      </div>
     </div>
     </div>
 
