--- a/View/Index.html
+++ b/View/Index.html
@@ -24,12 +24,12 @@
             <div class="navbar">
                 <a href="#" class="active">HOME</a>
                 <a href="#">ABOUT</a>
-                <a href="#">SERVICES</a>
+                <a href="#collections">OUR COLLECTIONS</a>
                 <a href="#">CONTACT US</a>
                 <a href="#">NEW ARRIVALS</a>
             </div>
             <div class="buttons"></div>
-            <div class="hamburger"></div>
+            <div class="hamburger"><i class="fa fa-bars"></i></div>
         </div>
         <div class="header2 position1 ">
           <div class="icons  ">
@@ -45,6 +45,7 @@
           <div class="content border p-4">  <h1>Menshion Store</h1>
             <h4>Get Up to 70% Discount </h4>
             <p>Discount are offered for limited time period so don't miss the chance and grab the opportunity</p>
+            <a href="tel:9846756632">Contact us</a>
         </div>
         
         <div class="backgroundimage" id="image1" data-aos="fade-left" data-aos-delay="800"><img src="../assests/image1.png" alt=""> </div>
@@ -52,21 +53,17 @@
         <div class="backgroundimage" id="image3" data-aos="fade-up" ><img src="../assests/image3.png" alt=""> </div>
         <!-- <div class="backgroundimage" id="image4"><img src="../assests/image1.png" alt=""> </div> -->
     </div>
-    <div class="newarrivals">
-      <h1 class="heading"> New Arrivals</h1>
-      <div class="cards-wrapper  row p-4 container m-auto">
+    <div class="newarrivals p-4 " id="collections">
+      <h1 class="heading"> Our Collections</h1>
+      <div class="cards-wrapper border  container m-auto row">
         <div class="cards col-lg-3 col-md-4 col-sm-6">
           <div class="card container">
             <div class="image-section"> 
               <img src="../assests/1.jpg" alt="">
-              <div class="icons">
-                <a href=""> <i class="fa fa-heart"></i></a>
-              </div>
             </div>
-            <div class="content p-4">
+            <div class="content ">
               <div class="title">
                 <a href="">Hoodie</a>
-                <p>Rs. 0.00</p>
               </div>
               <div class="price"></div>
             </div>
@@ -76,14 +73,10 @@
           <div class="card container">
             <div class="image-section"> 
               <img src="../assests/2.jpg" alt="">
-              <div class="icons">
-                <a href=""> <i class="fa fa-heart"></i></a>
-              </div>
             </div>
-            <div class="content p-4">
+            <div class="content ">
               <div class="title">
                 <a href="">Jeans Pants</a>
-                <p>Rs. 0.00</p>
               </div>
               <div class="price"></div>
             </div>
@@ -93,14 +86,10 @@
           <div class="card container">
             <div class="image-section"> 
               <img src="../assests/3.jpg" alt="">
-              <div class="icons">
-                <a href=""> <i class="fa fa-heart"></i></a>
-              </div>
             </div>
-            <div class="content p-4">
+            <div class="content ">
               <div class="title">
                 <a href="">Hoodie</a>
-                <p>Rs. 0.00</p>
               </div>
               <div class="price"></div>
             </div>
@@ -110,14 +99,10 @@
           <div class="card container">
             <div class="image-section"> 
               <img src="../assests/5.jpg" alt="">
-              <div class="icons">
-                <a href=""> <i class="fa fa-heart"></i></a>
-              </div>
             </div>
-            <div class="content p-4">
+            <div class="content ">
               <div class="title">
                 <a href="">Hoodie</a>
-                <p>Rs. 0.00</p>
               </div>
               <div class="price"></div>
             </div>
@@ -127,14 +112,64 @@
           <div class="card container">
             <div class="image-section"> 
               <img src="../assests/5.jpg" alt="">
-              <div class="icons">
-                <a href=""> <i class="fa fa-heart"></i></a>
-              </div>
             </div>
-            <div class="content p-4">
+            <div class="content ">
               <div class="title">
                 <a href="">Jumpers</a>
-                <p>Rs. 0.00</p>
+               
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/shoes1.jpg" alt="">
+            </div>
+            <div class="content ">
+              <div class="title">
+                <a href="">Addidas Shoes</a>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/shoes2.jpg" alt="">
+            </div>
+            <div class="content ">
+              <div class="title">
+                <a href="">Nike Shoes</a>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/shoes3.jpg" alt="">
+            </div>
+            <div class="content ">
+              <div class="title">
+                <a href="">Sports Shoes</a>
+              </div>
+              <div class="price"></div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="cards col-lg-3 col-md-4 col-sm-6">
+          <div class="card container">
+            <div class="image-section"> 
+              <img src="../assests/shoes4.jpg" alt="">
+            </div>
+            <div class="content ">
+              <div class="title">
+                <a href="">Sports Shoes</a>
               </div>
               <div class="price"></div>
             </div>
