--- a/css/style.css
+++ b/css/style.css
@@ -180,10 +180,35 @@
     
     /* line-height: 4rem; */
 }
+
+.main .home h1{
+    font-size: 50px;
+    -webkit-text-stroke:1px  black;
+    font-weight: bold;
+    /* font-family: */
+    color:white;
+}
 .main .home h4{
     text-transform: uppercase;
     font-weight: bold;
+    /* font-size: ; */
     /* color: gray; */
+}
+.main .home a{
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding: 10px 20px;
+   line-height: 3rem;
+   position: relative;
+  
+}
+
+.main .home a:hover{
+   background-color: black;
+    transition: 0.3s ease-in;
+    color: white;
+   
 }
 
 .main .home .backgroundimage
@@ -226,13 +251,22 @@
     bottom: 10%;
     left: 500px;
 }
+
+/* .main .newarrivals .cards-wrapper
+{
+    display: flex;
+    overflow-x: scroll;
+} */
 .main .newarrivals .cards-wrapper .cards
 {
     border: 1px solid white;
+    padding-top: 20px;
+
 }
 .main .newarrivals .cards-wrapper .cards .card{
     border: 1px solid white;
 }
+
 .main .newarrivals .cards-wrapper .cards .card .image-section
 {
     height: 350px;
@@ -252,13 +286,14 @@
 .main .newarrivals .cards-wrapper .cards .card .content
 {
     text-align: center;
+    padding: 5px;
 }
 .main .newarrivals .cards-wrapper .cards .card .content a{
     text-decoration: none;
     color: #363636;
     text-align: center;
     font-family:monospace;
-    font-weight: bold;
+    /* font-weight: bold; */
     font-size: 14px;
     letter-spacing: 1px;
 }
@@ -273,5 +308,34 @@
     width: 100%;
    border-radius: 3px;
    
+}
+
+
+
+@media only screen and (max-width: 800px){
+     
+.header .navbar
+{
+    display: none;
+}
+.main .header .hamburger
+{
+    display: inline-block;
+}
+.header .hamburger i {
+    
+    width: 20%;
+    font-size: 30px;
+    /* display: block; */
+   
+    color: black;
+}
+    
+    .main .header2 .icons 
+    {
+        /* font-size: ; */
+        width: 25%;
+    }
+
 }
 
