--- a/View/Index.html
+++ b/View/Index.html
@@ -23,7 +23,7 @@
             <div class="logo"><img src="../assests/logo.png" alt=""></div>
             <div class="navbar">
                 <a href="#" class="active">HOME</a>
-                <a href="#">ABOUT</a>
+                <a href="#about">ABOUT</a>
                 <a href="#collections">OUR COLLECTIONS</a>
                 <a href="#">CONTACT US</a>
                 <a href="#">NEW ARRIVALS</a>
@@ -32,6 +32,9 @@
             <div class="hamburger"><i class="fa fa-bars"></i></div>
         </div>
         <div class="header2 position1 ">
+          <!-- <div class="contact d-flex justify-content-center align-items-center">
+            phone: 9846756632
+          </div> -->
           <div class="icons  ">
             <!-- <p>Follow us on :</p> -->
             <a href=""> <i class="fa fa-instagram"></i></a>
@@ -40,6 +43,8 @@
           </div>
         </div>
         <!-- End of the Navbar -->
+
+       
 
         <div class="home ">
           <div class="content border p-4">  <h1>Menshion Store</h1>
@@ -52,133 +57,173 @@
         <div class="backgroundimage" id="image2" data-aos="fade-right" data-aos-delay="800"><img src="../assests/image2.png" alt=""> </div>
         <div class="backgroundimage" id="image3" data-aos="fade-up" ><img src="../assests/image3.png" alt=""> </div>
         <!-- <div class="backgroundimage" id="image4"><img src="../assests/image1.png" alt=""> </div> -->
-    </div>
-    <div class="newarrivals p-4 " id="collections">
-      <h1 class="heading"> Our Collections</h1>
-      <div class="cards-wrapper border  container m-auto row">
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/1.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Hoodie</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
         </div>
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/2.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Jeans Pants</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
-        </div> 
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/3.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Hoodie</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
-        </div>
-         <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/5.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Hoodie</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
-        </div>
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/5.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Jumpers</a>
+
+       
+
+        <div class="about container-fluid " id="about">
+          <h1 class="heading"> About Us </h1>
+          <div class="container  ">
+              <div class="row text-center text-black d-flex p-4  rounded my-4">
+                 <div class="container col-lg-12 row border">
+                  <div class="col-sm-12 col-md-12 col-lg-6 p-4 ">
+                    <h4 class="text-center p-2 heading5">Who we are?</h4>
+                    <p class="text-center "> Welcome to our Menshion Store website, founded in 20222 with a passion for quality and style. You can trust us for our commitment to top-notch quality, trendsetting selection, customer-centric service, and eco-friendly initiatives. We want tobuild our small business to a well-established brand in near future by  by innovation, community engagement, and a global reach, all is possible after fostering trust and loyalty from our valued customers. Join us in redefining men's fashion and experience our exceptional clothing collections for every occasion.
+                    </p>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-6 text-center  image-section " style="z-index: -1;">
+                    <img  class="shadow" src="../assests/about1.jpg"   alt="" style="z-index: -1;">
+                </div>
+                 </div>
+                 <div class="container col-lg-12 row py-4">
+                  <div class="col-sm-12 col-md-12 col-lg-6 text-center  image-section " style="z-index: -1;">
+                    <img  class="shadow" src="../assests/about2.jpg"    alt="" style="z-index: -1;">
+                </div>
+                  <div class="col-sm-12 col-md-12 col-lg-6 p-4 ">
+                    <h4 class="text-center p-2 heading5">Why Choose Us?</h4>
+                    <p class="text-center">Choose us because we're not just a men's fashion shop; we're a destination for style, quality, and trust. Within short period of time, we have evolved into a leading authority in men's fashion. Trust us for our unwavering commitment to providing you with garments that exude sophistication and flair. Our expertly curated collection, in tune with the latest trends, guarantees you'll always look your best. What sets us apart is our customer-centric approach; we're here to make your shopping experience seamless and enjoyable, with hassle-free returns and exceptional service. Plus, our dedication to eco-friendly practices underscores our responsibility towards the environment. Choose us and join a fashion journey that has garnered accolades, celebrated collaborations, and a growing global presence. Your trust in us fuels our mission to redefine men's fashion, making every moment an opportunity to shine.
+                    </p>
+                </div>
                
+                 </div>
               </div>
-              <div class="price"></div>
-            </div>
+              
+             
+
           </div>
-        </div>
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/shoes1.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Addidas Shoes</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
-        </div>
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/shoes2.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Nike Shoes</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
-        </div>
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/shoes3.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Sports Shoes</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
-        </div>
-        
-        <div class="cards col-lg-3 col-md-4 col-sm-6">
-          <div class="card container">
-            <div class="image-section"> 
-              <img src="../assests/shoes4.jpg" alt="">
-            </div>
-            <div class="content ">
-              <div class="title">
-                <a href="">Sports Shoes</a>
-              </div>
-              <div class="price"></div>
-            </div>
-          </div>
-        </div>
-        
+          
+
+         
+
 
       </div>
-    </div>
+        <!-- End of the About Page -->
+        <div class="newarrivals p-4 " id="collections">
+          <h1 class="heading"> Our Collections</h1>
+          <div class="cards-wrapper border  container m-auto row">
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/1.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Hoodie</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/2.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Jeans Pants</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div> 
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/3.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Hoodie</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/5.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Hoodie</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/5.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Jumpers</a>
+                  
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/shoes1.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Addidas Shoes</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/shoes2.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Nike Shoes</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/shoes3.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Sports Shoes</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="cards col-lg-3 col-md-4 col-sm-6">
+              <div class="card container">
+                <div class="image-section"> 
+                  <img src="../assests/shoes4.jpg" alt="">
+                </div>
+                <div class="content ">
+                  <div class="title">
+                    <a href="">Sports Shoes</a>
+                  </div>
+                  <div class="price"></div>
+                </div>
+              </div>
+            </div>
+            
+
+          </div>
+        </div>
     </div>
 
 
