--- a/View/Index.html
+++ b/View/Index.html
@@ -45,7 +45,7 @@
         <!-- End of the Navbar -->
 
        
-
+        <!-- start of the home page -->
         <div class="home ">
           <div class="content border p-4">  <h1>Menshion Store</h1>
             <h4>Get Up to 70% Discount </h4>
@@ -59,8 +59,10 @@
         <!-- <div class="backgroundimage" id="image4"><img src="../assests/image1.png" alt=""> </div> -->
         </div>
 
-       
+        <!-- end of the home page -->
 
+       
+<!-- start of the about us page of mention stores -->
         <div class="about container-fluid " id="about">
           <h1 class="heading"> About Us </h1>
           <div class="container  ">
@@ -98,6 +100,8 @@
 
       </div>
         <!-- End of the About Page -->
+
+        <!-- start of the new collection page of the website -->
         <div class="newarrivals p-4 " id="collections">
           <h1 class="heading"> Our Collections</h1>
           <div class="cards-wrapper border  container m-auto row">
@@ -224,6 +228,18 @@
 
           </div>
         </div>
+
+        <!-- End of the new collection page of the website -->
+
+        <!-- Start of the footer of the website -->
+
+        <div class="footer p-4 container-fluid text-center text-white  border bg-dark d-flex justify-content-between " id="footer">
+         <div class="address">  Shutter-a/24, Buddha Bishal Bazar, Pokhara, Nepal</div>
+         <div>@copy_right Menshion Store 2023</div>
+         <div class="contact-details"> Phone Number: 9846756632</div>
+        </div>
+
+        <!-- End of the footer page -->
     </div>
 
 
