--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ body {
   /* border: 1px solid gray; */
   position: relative;
   font-family: monospace;
-  background-color: #f1efef;
+  background-color: lightblue;
 
   /* line-height: 4rem; */
 }
